--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+parsefat
+
 # Prerequisites
 *.d
 
@@ -50,3 +52,9 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+.cproject
+.project
+
+disk.img*
+
